# fbm

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE.txt  Pipfile  README.md  README.rst  cholesky.py  daviesharte.py  fbm.py  hosking.py  pyproject.toml  pytest.ini  setup.py  tox.ini
fbm/: __init__.py  __version__.py  fbm.py  mbm.py
tests/: conftest.py  fbm_test.py  fbm_tests.py  mbm_test.py  sample.py
