[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "fbm"
version = "0.3.0"
description = ""
authors = ["Flynn <crf204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
matplotlib = "^3.1"
twine = "^1.13"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-xdist = "^1.28"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
wheel = "^0.33.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
